# eventum-core

./: .gitignore  CHANGELOG.md  LICENSE  LOGGING.md  README.md  cliff.toml  pyproject.toml  structlog.md
core/: app.py  credentials_manager.py  (+2 more)
eventum/: README.md  __main__.py  logging_config.py  pyproject.toml
eventum/catalog/: manage.py
eventum/cli/: __main__.py  cli_compose.py  cli_main.py  keyring.py  logging_config.py  main.py
eventum/core/: app.py  batcher.py  config.py  credentials_manager.py  defaults.py  entrypoint.py  executor.py  gauge.py  generator.py  initializer.py  main.py  manager.py  plugins_connector.py  settings.py  subprocesses.py  time_distribution.py
eventum/core/models/: application_config.py  config.py  errors_prettier.py  event_config.py  exit_codes.py  generators.py  input_config.py  metrics.py  mutex_model.py  output_config.py  runtime_settings.py  settings.py  time_mode.py  time_pattern.py  time_pattern_config.py
eventum/core/models/parameters/: api.py  generation.py  generator.py  log.py  path.py  startup.py
eventum/core/models/tests/: test_application_config_models.py  test_time_pattern_config_models.py
eventum/core/parameters/: api.py  generation.py  generator.py  startup.py
eventum/core/plugins/event/: base.py  jinja.py
eventum/core/plugins/event/jinja_modules/: rand.py  random.py
eventum/core/plugins/event/tests/: test_jinja_event_plugin.py
eventum/core/plugins/input/: base.py  cron.py  linspace.py  sample.py  time_pattern.py  time_patterns.py  time_sample.py  timer.py  timestamps.py
eventum/core/plugins/input/tests/: test_sample_input_plugin.py  test_time_patterns_input_plugin.py  test_timestamps_input_plugin.py
eventum/core/plugins/output/: base.py  file.py  null.py  opensearch.py  stdout.py
eventum/core/processes/input/: manager.py  runner.py
eventum/core/processes/input/tests/: test_manager.py  test_pool_runner.py  test_runner.py
eventum/core/tests/: test_application_config_models.py  test_batcher.py  test_config.py  test_credentials_manager.py  test_initializer.py  test_subprocesses.py
eventum/core/tests/static/: bad_tokens_config.yml  config.yml  invalid_structure_config.yml
eventum/eventum/: __main__.py
eventum/plugins/: exceptions.py  loader.py
eventum/plugins/base/: metrics.py  plugin.py
eventum/plugins/event/: exceptions.py
eventum/plugins/event/base/: config.py  metrics.py  plugin.py
eventum/plugins/event/plugins/jinja/: config.py  context.py  file_lock.py  metrics.py  mixins.py  plugin.py  sample_reader.py  state.py  template_pickers.py
eventum/plugins/event/plugins/replay/: config.py  plugin.py
eventum/plugins/input/: adapters.py  batcher.py  buffer.py  fields.py  merger.py  mixins.py  normalizers.py  protocols.py  relative_time.py  scheduler.py
eventum/plugins/input/base/: buffer.py  config.py  metrics.py  plugin.py
eventum/plugins/input/tests/: test_adapters.py  test_batcher.py  test_buffer.py  test_merger.py  test_mixins.py  test_normalizers.py  test_relative_time.py  test_scheduler.py
eventum/plugins/input/utils/: array_utils.py
eventum/plugins/output/: exceptions.py  fields.py  formatters.py
eventum/plugins/output/base/: config.py  metrics.py  plugin.py
eventum/plugins/output/tests/: test_fields.py
eventum/plugins/tests/: test_loader.py  test_registry.py
eventum/repository/: manage.py
eventum/repository/configs/: README.md  example.yaml  test.yaml
eventum/repository/samples/: README.md  hosts.csv  user.csv
eventum/repository/samples/tests/: sample.csv
eventum/repository/templates/: README.md  host_cpu.json.jinja  host_mem.json.jinja  test.json.jinja
eventum/repository/templates/test/: test.json.jinja
eventum/repository/templates/tests/: test.json.jinja  test_csv_sample.json.jinja  test_items_sample.json.jinja  test_params.json.jinja  test_subprocess.json.jinja
eventum/repository/time_patterns/: README.md  test.yml
eventum/repository/time_patterns/daily/: activity_13.yml  peak_at_09.yml  peak_at_18.yml  pick_at_09.yml  pick_at_18.yml
eventum/security/: manage.py
eventum/studio/: 01_Time_distribution.py  __main__.py  calculations.py  home_page.py  key_management.py  main.py  models.py  notifiers.py  session.py  theme.py  widget_key_management.py  widget_management.py
eventum/studio/.streamlit/: config.toml
eventum/studio/components/: component.py  sample_explorer.py  span_input.py  template_configuration_editor.py  template_configurator.py  template_editor.py  template_manager.py  template_renderer.py  template_state_viewer.py  time_pattern_adjuster.py  time_pattern_adjusters_list.py  time_pattern_configurator.py  time_pattern_configurator_list.py  time_pattern_distribution_histogram.py
eventum/studio/components/time_pattern/: configurator.py  configurator_list.py  distribution_histogram.py  downsampling_input.py  span_input.py
eventum/studio/pages/: 02_Event template.py  02_Event_template.py  02_Template.py
eventum/utils/: exceptions.py  fs.py  loaders.py  numpy_time.py  relative_time.py  timeseries.py  validation_prettier.py
eventum/utils/tests/: test_fs.py  test_numpy_time.py  test_relative_time.py  test_timeserieses.py
(+280 files in other folders)
