[tool.poetry]
name = "eventum-plugins"
version = "1.0.10"
description = "Plugins for Eventum"
license = "Apache-2.0"
authors = ["Nikita Reznikov <nikita.reznikov.public@mail.ru>"]
readme = "README.md"
repository = "https://github.com/Eventum-Generatives/EventumPlugins"
documentation = "https://eventum-generatives.github.io/Website/"
keywords = ["plugin", "generator", "template", "scheduling", "time"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]
packages = [
  {include = "eventum_plugins"},
  {include = "eventum_plugins/py.typed"},
]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.2"
setproctitle = "^1.3.3"
numpy = "^1.26.4"
jinja2 = "^3.1.3"
aiohttp = {extras = ["speedups"], version = "^3.9.3"}
aiofiles = "^23.2.1"
croniter = "^2.0.5"
eventum-content-manager = "^1.0.3"
pytz = "^2024.1"

[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
pytest = "^8.0.1"
mypy = "^1.9.0"
types-aiofiles = "^23.2.0.20240403"
types-croniter = "^2.0.0.20240423"
types-pytz = "^2024.1.0.20240417"
freezegun = "^1.5.1"
pytest-asyncio = "^0.23.7"
aioresponses = "^0.7.6"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
