[tool.poetry]
name = "eventum"
version = "0.1.0"
description = "Flexible event generation tool"
license = "Apache-2.0"
authors = ["Nikita Reznikov <nikita.reznikov.public@mail.ru>"]
readme = "README.md"
repository = "https://github.com/rnv812/Eventum"
keywords = ["generator", "testing", "data"]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
eventum = "eventum.__main__:main"